# brewery-control

./: .gitignore  README.md
flow-meters/: .gitignore
flow-meters/flow_meters/: .gitignore  LICENSE  README.md  brewery-control.code-workspace  platformio.ini
flow-meters/flow_meters/pio/: build.py  operations.py
flow-meters/flow_meters/src/: flow_config.hpp  main.cpp  (+2 more)
ph-meters/: .env  azure-pipelines.yml  tox.ini
ph-meters/brewblox_meters/: Dockerfile  Meter.py  VolumeSensor.py  __main__.py  ads1115.py  config.json  docker-compose.yml  old_script.py
ph-meters/docker/: workspace.code-workspace
ph-meters/examples/: conftest.py
ph-meters/ph_meters/: platformio.ini
py-meters/: makefile  pyproject.toml  pyvenv.cfg
py-meters/CMakeTools/: cmake-tools-kits.json  log.txt
py-meters/docker/: Dockerfile
py-meters/py_meters/: .Meter.py.swo  .Meter.py.swp  .VolumeSensor.py.swp  .config.json.swp  .script.py.swp  Dockerfile  Meter.py  TEST.py  TEST_ads1115.py  TEST_script.py  TEST_volume_sensors.py  VolumeSensor.py  ads1115.py  config.json  docker-compose.yml  external_sensor.py  script.py  script_cfg.py
py-meters/py_meters/notes/: TODO.txt  commands.txt  docker_commands.txt
py-meters/py_meters/old_things/: Meter.py  VolumeSensor.py  no_flow_script.py  old_full_script.py  script.py  script_cfg.py  test.py
ro-dispenser/ro_dispenser/: .gitignore  platformio.ini
spund-system/: .script.py.swp  Dockerfile  docker-compose.yml  script.py
spund-system/spund_system/: .gitignore  config_local.h  docker_commands.txt  esp_pinouts.txt  pio_run.py  platformio.ini
(+80 files in other folders)
