[tool.poetry]
name = "brewblox-meters"
version = "0.1.0"
description = "brewblox pH meters service"
authors = ["Rob Knighton <rob.knighton10@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "~1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
